@@ -5,6 +5,7 @@
 * 2014-01-03 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 25160: Added basic support for caldav-sharing, don't include "owner" property, skip implicit folder owner participant
+ - Fix for bug 30449: Exclude X-OPEN-XCHANGE-CTYPE attribute for CardDAV synchronization
 
 * 2014-01-02 - thorben.betten@open-xchange.com
 
